Remove the high-beam flash feature (workstream 1)
